--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,4 +33,4 @@ jobs:
        
     - name: Test with pytest
       run: |
-        pytest projet QR Code/test_QRCoode.py
+        pytest C:\Users\morga\OneDrive\Documents\ESGI\firstname\projet QR Code\test_QRCoode.py
